# 2018_AAV

./: .gitignore  .makeBuild.sh.swp  CMakeLists.txt  MakeBuild.cpp  README.md  errors  makeBuild  makeBuildV2.cpp  readme.txt
GitHub/dev_ws/devel/: .catkin  .rosinstall  setup.sh
GitHub/dev_ws/devel/lib/localization/: talker
GitHub/dev_ws/devel/lib/pkgconfig/: localization.pc
GitHub/dev_ws/src/localization/include/: Detection.h  (+1 more)
build001/: CMakeCache.txt  LOG.txt  Makefile  cmake_install.cmake  stereo
build001/Build src/inc/: Camera.h
build001/Build src/src/: BlobDetector.cpp  Test.cpp  compiling_error.txt  simplemain.cpp
build002/: CMakeCache.txt  LOG.txt  Makefile  cmake_install.cmake  stereo
build002/build src/inc/: Test.h
build002/build src/src/: BlobDetector.cpp  Camera.cpp
dev_ws/: Parameters.xml
dev_ws/devel/: .catkin  .rosinstall  .setup.bash.swp  _setup_util.py  env.sh  setup.bash  setup.sh  setup.zsh
dev_ws/devel/include/localization/: Num.h
dev_ws/devel/lib/localization/: listener  localization  talker
dev_ws/devel/lib/pkgconfig/: Localization.pc  localization.pc
dev_ws/logs/catkin_tools_prebuild/: build.symlink.001.log.stderr
dev_ws/logs/localization/: build.cmake.000.log.stderr  build.make.000.log.stderr  build.make.001.log.stderr  build.make.003.log.stderr  build.make.004.log.stderr
dev_ws/src/localization/: CMakeLists.txt
dev_ws/src/localization/include/: Calibration.h  Camera.h  Communication.h  Constants.h  Detection.h  Robot.h  Test.h  Utility.h  talk.h
dev_ws/src/localization/msg/: localizedTalker.msg
dev_ws/src/localization/src/: Calibration.cpp  Camera.cpp  Communication.cpp  Detection.cpp  Robot.cpp  Utility.cpp  localization.cpp  talker.cpp
inc/: BlobDetector.h
src/: simplemain.cpp
stuffnotused/: Calibrate.cpp  Calibrate.h
(+28 files in other folders)
